// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OptionGroup renders a default state 1`] = `
<div>
  <div
    class="fui-OptionGroup"
    role="group"
  >
    Default OptionGroup
  </div>
</div>
`;

exports[`OptionGroup renders with a label 1`] = `
<div>
  <div
    aria-labelledby="group-label_r_8_"
    class="fui-OptionGroup"
    role="group"
  >
    <span
      class="fui-OptionGroup__label"
      id="group-label_r_8_"
      role="presentation"
    >
      optgroup label
    </span>
    Default OptionGroup
  </div>
</div>
`;
